# VAE-CVAE

./: .gitignore  README.md  arc_cvae.py  arc_vae.py  docs.typ  mnist.py  pyproject.toml  pyrefly.toml
.github/workflows/: docs.yml
docs/: docs.typ
models/: __init__.py  arccvae.py  arcvae.py  cvae.py  types_.py  vae.py
scripts/: data_parser_test.py  download_arc.py
